# stereo

./: .gitignore  CMakeLists.txt  README.md
aist/: CMakeLists.txt
aist/data/: left_intrinsics.yml  right_intrinsics.yml  stereo_extrinsics.yml
aist/include/: FlyCap2CV.h
aist/src/: FlyCap2CV.cpp  main.cpp
data/: left_intrinsics.yml
include/: FlyCap2CV.h
laptop/: CV_learn  makefile
laptop/data/: dso_intrinsics.txt  intrinsics.yml
laptop/src/: main.cpp
laptop/src/mysrc/: calibration.cpp  main.cpp  optflow_test.cpp  test.cpp
src/: FlyCap2CV.cpp  main.cpp
